--- a/styles.css
+++ b/styles.css
@@ -39,7 +39,7 @@ main{
 .card{
     width: 100%;
     max-width: 450px;
-    background-color: var(--soft-violet);
+    background-color: #6e1283;
     /* background-color: var(--dark-desaturated-blue); */
     color: var(--white-stats);
     border-radius: 0.8rem;
@@ -49,18 +49,13 @@ main{
     border: none;
 }
 
-.card--image-container{
-    background-color: var(--soft-violet);
-    padding: 0;
-}
 
 
 .card--image{
     width: 100%;
     height: 100%;
-    opacity: 0.5;
+    opacity: 0.60;
     content: url('./images/image-header-mobile.jpg');
-    background-color: var(--soft-violet);
     
 }
 
@@ -142,12 +137,15 @@ main{
     }
 
     .card--summary--text{
-        padding-right: 4rem;
+        padding-right: 5rem;
     }
 
     .card--summary--stats{
         flex-direction: row;
+        padding-right: 5rem;
         padding-bottom: 0;
+        justify-content: space-between;
+        font-size: 0.9rem;
     }
 
 
